--- a/final-monitor/pom.xml
+++ b/final-monitor/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.4.0</version>
+        <version>1.4.1-SNAPSHOT</version>
     </parent>
 
     <packaging>jar</packaging>
