--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>final-json</module>
         <module>final-poi</module>
         <module>final-security</module>
+        <module>final-doc</module>
     </modules>
 
     <properties>
@@ -167,6 +168,11 @@
             <dependency>
                 <groupId>org.ifinalframework</groupId>
                 <artifactId>final-poi</artifactId>
+                <version>1.4.1-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ifinalframework</groupId>
+                <artifactId>final-doc</artifactId>
                 <version>1.4.1-SNAPSHOT</version>
             </dependency>
             <!-- ==================================================================================================== -->
