--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,8 @@
         <!--Sonar-->
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
-        <sonar.organization>likly</sonar.organization>
-        <sonar.projectKey>likly_final-frameworks</sonar.projectKey>
-
+        <sonar.organization>final-projects</sonar.organization>
+        <sonar.projectKey>final-projects_final-frameworks</sonar.projectKey>
     </properties>
 
     <url>https://github.com/final-projects/final-framework</url>
