--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.organization>final-projects</sonar.organization>
         <sonar.projectKey>final-projects_final-framework</sonar.projectKey>
+        <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
     </properties>
 
     <url>https://github.com/final-projects/final-framework</url>
