--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <module>final-web</module>
         <module>final-webmvc</module>
         <module>final-webflux</module>
+        <module>final-validation</module>
     </modules>
 
     <properties>
@@ -190,6 +191,11 @@
             <dependency>
                 <groupId>org.ifinalframework</groupId>
                 <artifactId>final-doc</artifactId>
+                <version>1.5.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.ifinalframework</groupId>
+                <artifactId>final-validation</artifactId>
                 <version>1.5.0-SNAPSHOT</version>
             </dependency>
             <!-- ==================================================================================================== -->
