--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,6 @@ jobs:
             [
               {
                 "id": "ci",
-                "name": "ci",
                 "properties": {
                   "altSnapshotDeploymentRepository": "${{ secrets.ALT_SNAPSHOT_DEPLOYMENT_REPOSITORY }}",
                   "altReleaseDeploymentRepository": "${{ secrets.ALT_RELEASE_DEPLOYMENT_REPOSITORY }}"
@@ -69,7 +68,7 @@ jobs:
       - name: Cat Setting.xml
         run : cat /home/runner/.m2/settings.xml
       - name: Build with Maven
-        run: mvn -B package -Pci --file pom.xml
+        run: mvn -U -B package -Pci --file pom.xml
       - name: Deploy with Maven
         run: mvn -B deploy -Pci --file pom.xml
       - name: Codecov
