--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,9 +72,9 @@ jobs:
       - name: Cat Setting.xml
         run : cat /home/runner/.m2/settings.xml
       - name: Build with Maven
-        run: mvn -U -B package -Pci --file pom.xml
+        run: mvn -U -B package -Pgithub,ci --file pom.xml
       - name: Deploy with Maven
-        run: mvn -B deploy -Pci --file pom.xml
+        run: mvn -B deploy -Pgithub,ci --file pom.xml
       - name: Codecov
         uses: codecov/codecov-action@v3
       - name: Cache SonarCloud packages
