--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,8 @@ jobs:
                 }
               }
             ]
+      - name: Clean Maven Repository
+        run: rm -rf /home/runner/.m2/repository
       - name: Cat Setting.xml
         run : cat /home/runner/.m2/settings.xml
       - name: Build with Maven
