--- a/final-aop/pom.xml
+++ b/final-aop/pom.xml
@@ -56,7 +56,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.5.0-SNAPSHOT</version>
+        <version>1.5.0</version>
     </parent>
 
     <url>https://github.com/final-projects/final-framework</url>
