--- a/final-retrofit/pom.xml
+++ b/final-retrofit/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.5.0-SNAPSHOT</version>
+        <version>1.5.0</version>
     </parent>
     <artifactId>final-retrofit</artifactId>
 
