--- a/final-web/pom.xml
+++ b/final-web/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>org.ifinalframework</groupId>
-        <version>1.5.1</version>
+        <version>1.5.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>final-web</artifactId>
