--- a/final-webmvc/pom.xml
+++ b/final-webmvc/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.ifinalframework</groupId>
         <artifactId>final-framework</artifactId>
-        <version>1.5.1</version>
+        <version>1.5.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>final-webmvc</artifactId>
