--- a/final-context/pom.xml
+++ b/final-context/pom.xml
@@ -44,12 +44,16 @@
             <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
-            <artifactId>validation-api</artifactId>
-            <groupId>javax.validation</groupId>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.ifinalframework</groupId>
             <artifactId>final-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.ifinalframework</groupId>
+            <artifactId>final-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>org.ifinalframework</groupId>
