:page_facing_up: update developer info

--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 
     <developers>
         <developer>
-            <email>ifinal.io@qq.com</email>
+            <email>iimik@qq.com</email>
             <id>mik</id>
             <name>mik</name>
             <roles>
