--- a/final-webflux/pom.xml
+++ b/final-webflux/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.ifinalframework</groupId>
         <artifactId>final-framework</artifactId>
-        <version>1.5.4-SNAPSHOT</version>
+        <version>1.5.4</version>
     </parent>
 
     <artifactId>final-webflux</artifactId>
