--- a/final-context/pom.xml
+++ b/final-context/pom.xml
@@ -89,7 +89,7 @@
 
     <developers>
         <developer>
-            <email>569553290@qq.com</email>
+            <email>iimik@qq.com</email>
             <id>iimik</id>
             <name>iimik</name>
             <roles>
