--- a/final-core/pom.xml
+++ b/final-core/pom.xml
@@ -92,7 +92,7 @@
 
     <developers>
         <developer>
-            <email>569553290@qq.com</email>
+            <email>iimik@qq.com</email>
             <id>iimik</id>
             <name>iimik</name>
             <roles>
