--- a/final-json/pom.xml
+++ b/final-json/pom.xml
@@ -37,7 +37,7 @@
 
     <developers>
         <developer>
-            <email>569553290@qq.com</email>
+            <email>iimik@qq.com</email>
             <id>iimik</id>
             <name>iimik</name>
             <roles>
